k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    gateway-access: 'true'
---
apiVersion: v1
kind: Namespace
metadata:
  name: prd
  labels:
    gateway-access: 'true'
